@@ -4797,3 +4797,5 @@
          memory_map_romcs() to memory_map_romcs_full() (Stuart).
 20150507 peripherals/disk/wd_fdc.c: fix WD2797 side selection (more of patch
          #330) (Gergely Szasz).
+20150508 peripherals/disk/wd_fdc.c: really fix WD2797 side selection (even more
+         of patch #330) (Gergely Szasz).
